--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,24 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.4.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<mainClass>applications.PetManager</mainClass>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
